--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Face detection on the browser using javascript !</title>
-
-  <script defer src="/models/face-api.min.js"></script>
-  <script defer src="/models/script.js"></script>
-  <link rel="stylesheet" href="/models/style.css">
-  <style>
-   
-  </style>
+  <title>Face-API AI Real-Time Facial Detection</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <script defer src="face-api.min.js"></script>
+  <script defer src="app.js"></script>
 </head>
-<body>
-  <video id="video" width="640" height="480" autoplay></video>
-<canvas id="canvas"></canvas>
-<p id="emotion-container"></p>
-<p id="age-container"></p>
-<p id="gender-container"></p>
 
+<body>
+  <main class="container">
+    <h1>Real-Time facial detection</h1>
+    <p>We will use Javascript and Face-API to create a real time facial detection system</p>
+    <div id="video-container" class="video-container">
+      <video id="video" autoplay muted width="500" height="500"></video>
+    </div>
+  </main>
 </body>
+
 </html>
